--- a/_config.yml
+++ b/_config.yml
@@ -82,10 +82,9 @@ analytics:
 author:
   name             : "Mohammad Saneian"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
+  bio              : 
+  location         : "Boston"
   employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=h3RbvqsAAAAJ&hl=en"
   email            :
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
@@ -96,6 +95,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
+  codeforces       : "https://codeforces.com/profile/SaSa"
   github           : "sanmoh99"
   google_plus      :
   keybase          :
@@ -103,18 +103,17 @@ author:
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "mohammadsasa99"
   vine             :
   weibo            :
   xing             :
   youtube          :
   wikipedia        :
+
 
 
 # Reading Files
