--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Mohammad Saneian"
   avatar           : "profile.png"
-  bio              : 
+  bio              : ""
   location         : "Boston"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=h3RbvqsAAAAJ&hl=en"
