--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Boston, MA"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=h3RbvqsAAAAJ&hl=en"
-  email            :
+  email            : "saneian.m@northeastern.edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
