--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,4 @@
 # main links links
 main:    
   - title: "CV"
-    url: https:/sanmoh99.github.io/files/CV.pdf
+    url: https://sanmoh99.github.io/files/CV.pdf
