--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ author:
   facebook         :
   foursquare       :
   codeforces       : "https://codeforces.com/profile/SaSa"
-  github           : 
+  github           : "sanmoh99"
   google_plus      :
   keybase          :
   instagram        :
